--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 matplotlib==3.6.3
-matplotlib-inline==0.1.6
 nltk==3.8.1
 numpy==1.24.1
 pandas==1.5.2
@@ -9,3 +8,7 @@ scikit-learn==1.2.0
 scipy==1.10.0
 seaborn==0.12.2
 streamlit==1.17.0
+wordcloud==1.8.2.2
+
+
+
